k8s/v1.16/ingress/ingress_gitlab.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default  # default为默认值，当namespace为default时该参数可省略
spec:
  rules:
  - host: gitlab.ingress.com
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
