k8s/v1.16/ingress/ingress_jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kube-ops # namespace必须与想要请求的服务相同，可以与ingress-controller不同
spec:
  rules:
  - host: jenkins.ingress.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
